# cursor-changer

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PRIVACY_POLICY.md  README.md  cargo-tauri.cmd  package-lock.json  package.json  rust-toolchain.toml  test_cc_output.txt  test_library_sync.md  test_ui_output.txt  test_ui_output_2.txt  todo.md
src-tauri/: Cargo.toml  README.md  build.rs  package-lock.json  package.json  tauri.conf.json  vitest.config.ts
src-tauri/capabilities/: default.json
src-tauri/default-cursors/mac/: precision-select.cur
src-tauri/default-cursors/windows/: diagonal-resize-2.cur  text-select.cur
src-tauri/frontend-src/components/: cursor-studio.js
src-tauri/nsis-languages/: en-US.nsh
src-tauri/scripts/: start-frontend-if-needed.cjs  start-frontend-if-needed.js
src-tauri/src/: cleanup-main.ps1  cleanup_hooks.rs  cursor_converter_tests.rs  cursor_defaults.rs  events.rs  lib.rs  logging.rs  main.rs  minimal_test.rs  paths.rs  shortcuts.rs  startup.rs  system.rs  tray.rs  window_events.rs  window_setup.rs
src-tauri/src/commands/: command_helpers.rs  cursor_commands.rs  customization_commands.rs  effects_commands.rs  file_commands.rs  folder_watcher.rs  hotkey_commands.rs  mod.rs  mode_commands.rs  registry.rs  settings_commands.rs  shutdown.rs  theme_commands.rs  window_commands.rs
src-tauri/src/cursor_converter/: binary_writer.rs  cur_generator.rs  mod.rs  property_tests.rs  (+2 more)
src-tauri/test/: commands.test.js  cursor_converter.test.js  error-handling.test.js  library-refresh.test.js  main_orchestration.test.js  set_cursor.test.js  setup.js  smoke.test.js  state-management.test.js  tauri-integration.test.js
src-tauri/tests/: CONTRACT_TESTING.md  command_name_contract_tests.rs  command_pattern_linting_tests.rs  command_return_type_contract_tests.rs  command_schema_export.rs  concurrency_property_tests.proptest-regressions  concurrency_property_tests.rs  convert_defaults.rs  convert_svg_cursors.rs  cursor_conversion_edge_cases.rs  cursor_conversion_property_tests.rs  cursor_conversion_unit_tests.rs  error_handling_property_tests.proptest-regressions  error_handling_property_tests.rs  error_propagation_tests.rs  error_recovery_tests.rs  event_handler_contract_tests.rs  file_operations_property_tests.proptest-regressions  file_operations_property_tests.rs  generate_typescript_types.rs  memory_leak_detection_tests.rs  performance_large_file_tests.rs  performance_memory_leak_tests.rs  performance_stress_concurrent_tests.rs  regression_corrupted_file_panic.rs  regression_hotspot_out_of_bounds.rs  regression_oversized_cursor_crash.rs  regression_state_desync.rs  resource_cleanup_tests.rs  resource_management_property_tests.rs  state_management_property_tests.rs  state_management_unit_tests.rs  tauri_commands_unit_tests.rs  test_support.rs
(+426 files in other folders)
