[package]
name = "cursor_changer_tauri"
version = "1.0.0"
edition = "2021"
default-run = "cursor_changer_tauri"

description = "Tauri application for cursor_changer"
license = "MIT"
repository = "https://github.com/user/cursor-changer"
readme = "README.md"
keywords = ["cursor", "tauri", "windows", "customization"]
categories = ["gui"]

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"

[dependencies]
tauri = { version = "2.9.3", features = [ "tray-icon", "image-ico"] }
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-shell = "2.0.0"
tauri-plugin-updater = "2.0.2"
"cursor_changer" = { path = ".." }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
dirs = "6.0.0"
image = "0.25.9"
base64 = "0.22.1"
resvg = "0.45.1"
usvg = "0.45.1"
tiny-skia = "0.11.4"
zip = "6.0.0"
winreg = "0.55.0"
rayon = "1.10"
memchr = "2.7"
windows = { version = "0.62.2", optional = true }
ts-rs = "11.1.0"
notify = "8.0"
time = { version = "0.3.44", features = ["formatting"] }
chrono = "0.4.38"
tempfile = "3.23.0"

[dev-dependencies]
tauri = { version = "2.9.3", features = ["test"] }
proptest = "1.5.0"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[features]
default = ["custom-protocol", "tray-icon", "image-ico"]
custom-protocol = ["tauri/custom-protocol"]
tray-icon = ["tauri/tray-icon"]
image-ico = ["tauri/image-ico"]
## Optional feature to enable WinRT/MSIX StartupTask support. Build with `--features msix` when creating MSIX packages.
# Enable the `windows` crate and the `ApplicationModel` feature (required to compile
# WinRT StartupTask APIs) when building with `--features msix`.
msix = ["windows", "windows/ApplicationModel"]
